--- a/css/reset.css
+++ b/css/reset.css
@@ -7,6 +7,11 @@
 *:after {
 	box-sizing: border-box;
 }
+a, a:active, a:focus, a:target, a:focus-visible, a:visited {
+    text-decoration: none;
+    color: inherit;
+    outline: none;
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
