--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'fonts.scss';
 @import 'all.min.css';
 @import 'var.scss';
+@import 'animations.scss';
 @import 'mixins.scss';
 @import 'templates.scss';
 
