--- a/scss/templates.scss
+++ b/scss/templates.scss
@@ -12,8 +12,19 @@
     &__wrapper {
       display: flex;
       justify-content: space-between;
-      max-width: 410px;
+      max-width: 455px;
       width: 100%;
+    }
+    &__hamburger {
+      display: none;
+      font-size: 25px;
+      cursor: pointer;
+      & i {
+        transition: $transition;
+        &:hover {
+          color: $accentColor;
+        }
+      }
     }
     &__menu-items {
       display: flex;
@@ -29,10 +40,11 @@
     }
     &__logotype {
       display: block;
-      &-img {
-        display: block;
-        padding: 0 50px;
-      }
+      background: url('../images/icons/logotype.svg') no-repeat center center;
+      height: 80px;
+      max-width: 100px;
+      width: 100%;
+      margin: 0 50px;
     }
     &__address {
       position: relative;
