--- a/scss/animations.scss
+++ b/scss/animations.scss
@@ -1,9 +1,8 @@
-@keyframes borderBottomWidth {
+@keyframes sliderOpacity {
   0% {
-    width: 0%;
+    opacity: 0;
   } 
   100% {
-    width: 100%;
+    opacity: 1;
   }
-  
 }
