--- a/scss/media.scss
+++ b/scss/media.scss
@@ -1,3 +1,23 @@
+@media (max-width: 1270px) {
+  .goods {
+    &__wrapper {
+      padding: 0 50px;  
+    }
+    &__items {
+      flex-wrap: wrap;
+    }
+    &__item {
+      width: 48%;
+    }
+    &__arrow-left {
+      left: 0;
+    }
+    &__arrow-right {
+      right: 0;
+    }
+  }
+}
+
 @media (max-width: $minWidthDesktop) {
   .categories {
     grid-template-columns: repeat(2, 48%);
@@ -66,5 +86,16 @@
 @media (max-width: 740px) {
   .categories {
     grid-template-columns: 100%;
+  }
+  .goods {
+    &__item {
+      width: 100%;
+    }
+    &__arrow-left {
+      display: none;
+    }
+    &__arrow-right {
+      display: none;
+    }
   }
 }
