--- a/scss/var.scss
+++ b/scss/var.scss
@@ -12,9 +12,14 @@ $accentColor: #1C62CD;
 $color1: #F0F0F4;
 $color2: #C4C4C4;
 $color3: #FFFFFF;
+$color4: #7f7f7f;
+$color5: #f9f9fc;
+$color6: #D7D9DF;
+$color7: #ff0000;
 
 // others
 $transition: .3s all;
 
+// media
 $minWidthDesktop: 1200px;
 $maxWidthLaptop: 960px;
