--- a/scss/animations.scss
+++ b/scss/animations.scss
@@ -6,3 +6,21 @@
     opacity: 1;
   }
 }
+
+@keyframes rotate90Degree {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(90deg);
+  }
+  0% {
+    transform: rotate(0deg);
+  }
+}
+
+.rotate90Degree {
+  &:after {
+    animation: rotate90Degree .3s ease both;
+  }
+}
