--- a/scss/media.scss
+++ b/scss/media.scss
@@ -70,6 +70,11 @@
       }
     }
   }
+  .goods__items_flex {
+    & > li {
+      width: 100%;
+    }
+  }
 }
 
 
@@ -79,6 +84,60 @@
     margin-bottom: 40px;
     &-bottom {
       display: none;
+    }
+  }
+  .footer {
+    background-color: $color2;
+    &__submit {
+      margin-right: 0;
+    }
+    &__wrapper {
+      height: auto;
+      flex-direction: column;
+      align-items: center;
+    }
+    &__navigation {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 40px;
+      &-info {
+        max-width: 300px;
+        width: 100%;
+        border-top: 2px solid $color1;
+        border-bottom: 2px solid $color1;
+        margin: -1px;
+        &-title {
+          color: $color4;
+          font-size: 14px;
+          line-height: 18px;
+          font-family: $SFProDisplayMedium;
+          font-weight: 500;
+          padding: 15px 0 15px 15px;
+          position: relative;
+          &:after {
+            content: '';
+            cursor: pointer;
+            background: url(../images/arrow-right.svg) no-repeat center center;
+            height: 20px;
+            width: 20px;
+            position: absolute;
+            right: 15px;
+            z-index: 4;
+          }
+        }
+        &-items {
+          display: none;
+          &.active {
+            display: block;
+          }
+        }
+        &-item {
+          padding: 5px 0 5px 15px;
+        }
+      }
+      &-social-links {
+        margin-top: 40px;
+      }
     }
   }
 }
