--- a/scss/style.scss
+++ b/scss/style.scss
@@ -207,8 +207,10 @@ body {
 
 .banner {
   @include container;
-  width: 100%;
   margin-bottom: 80px;
+  & img {
+    width: 100%;
+  }
 }
 
 .block {
