--- a/scss/media.scss
+++ b/scss/media.scss
@@ -86,6 +86,24 @@
       display: none;
     }
   }
+  .product {
+    &-wrapper {
+      display: block;
+    }
+    &-info {
+      width: 100%;
+      margin: 0 auto 40px auto;
+    }
+    &-specifications {
+      width: 100%;
+      margin: 0 auto;
+      &__characteristic-buyBtn {
+        display: block;
+        width: fit-content;
+        margin: 0 auto;
+      }
+    }
+  }
   .footer {
     background-color: $color2;
     &__submit {
