--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -524,6 +524,7 @@
   }
   &__tags {
     display: flex;
+    flex-wrap: wrap;
     max-width: 570px;
     &-item {
       margin-right: 10px;
@@ -625,11 +626,13 @@
   &-item-checkbox {
     margin-bottom: 40px;
     &__title {
+      cursor: pointer;
       display: flex;
       margin-bottom: 20px;
     }
     &__img {
       margin-right: 10px;
+      transform: rotate(90deg);
     }
     &__text {
       font-weight: 600;
@@ -654,11 +657,14 @@
       width: 50%;
       margin-bottom: 20px;
       &-wrapper {
-        display: flex;
+        display: none;
         justify-content: space-between;
         flex-wrap: wrap;
         width: 220px;
         max-width: 100%;
+        &.active {
+          display: flex;
+        }
       }
     }
     &__input {
@@ -668,10 +674,14 @@
   &__show-more {
     color: $accentColor;
     text-decoration: underline;
+    width: 100%;
   }
   &__stock-items {
-    display: flex;
+    display: none;
     justify-content: space-between;
+    &.active {
+      display: flex;
+    }
     & .notAvailibialy {
       background-color: $color1;
       color: $color2;
